Se harán pruebas con cuatro cartas para capturar los eventos OnClick()

--- a/index.html
+++ b/index.html
@@ -15,32 +15,10 @@
         </thead>
         <tbody>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-                <td>9</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td>11</td>
-                <td>12</td>
-                <td>13</td>
-                <td>14</td>
-                <td>15</td>
-            </tr>
-            <tr>
-                <td>16</td>
-                <td>17</td>
-                <td>18</td>
-                <td>19</td>
-                <td>20</td>
+                <td><a href="./cgi-enabled/index.py?card=1"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td><a href="./cgi-enabled/index.py?card=2"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td><a href="./cgi-enabled/index.py?card=3"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td><a href="./cgi-enabled/index.py?card=4"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
             </tr>
         </tbody>
         <tfoot>
