--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
         </thead>
         <tbody>
             <tr>
-                <td><a href="./cgi-enabled/index.py?card=1"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
-                <td><a href="./cgi-enabled/index.py?card=2"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
-                <td><a href="./cgi-enabled/index.py?card=3"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
-                <td><a href="./cgi-enabled/index.py?card=4"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td class="carta" id="1"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td class="carta" id="2"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td class="carta" id="3"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
+                <td class="carta" id="4"><img class="img-thumbnail img-fluid" src="./../p04/img/200px-NAP-01_Back.png"></a></td>
             </tr>
         </tbody>
         <tfoot>
             <tr><th colspan="5">Puntaje</th></tr>
         </tfoot>
     </table>
+    <p id="demo">Click me.</p>
+    <p id="demo1">no</p>
+
+    <script src="cartas.js"></script>
 </body>
 </html>
