--- a/p05/backend/index.html
+++ b/p05/backend/index.html
@@ -14,7 +14,70 @@
 
 <body class="bg-dark">
     <div class="table-responsive">
-        <a class="card" id="0" href="#"><img class="img-thumbnail img-fluid" src="./../img/200px-NAP-01_Back.png"></a>
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th class="text-center thead-font-border" colspan="5">Golden Stars Memorama</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td id="0" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="1" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="2" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="3" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="4" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                </tr>
+                <tr>
+                    <td id="5" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="6" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="7" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="8" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="9" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                </tr>
+                <tr>
+                    <td id="10" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="11" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="12" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="13" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="14" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                </tr>
+                <tr>
+                    <td id="15" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="16" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="17" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="18" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                    <td id="19" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src=./../img/200px-NAP-01_Back.png></td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th class="text-center tfoot-font-border" colspan="2">Intentos 0</th>
+                    <th class="text-center tfoot-font-border" colspan="2">Aciertos 0</th>
+                    <th class="text-center tfoot-font-border" colspan="1">%0</th>
+                </tr>
+            </tfoot>
+        </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
