Ya funciona todo tecnicamente

--- a/p05/index.html
+++ b/p05/index.html
@@ -22,52 +22,52 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="./index.py?card=0"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=1"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=2"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=3"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=4"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
+                    <td id="0" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="1" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="2" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="3" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="4" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
                 <tr>
-                    <td><a href="./index.py?card=5"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=6"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=7"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=8"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=9"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
+                    <td id="5" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="6" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="7" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="8" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="9" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
                 <tr>
-                    <td><a href="./index.py?card=10"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=11"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=12"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=13"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=14"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
+                    <td id="10" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="11" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="12" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="13" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="14" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
                 <tr>
-                    <td><a href="./index.py?card=15"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=16"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=17"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=18"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
-                    <td><a href="./index.py?card=19"><img class="img-thumbnail img-fluid"
-                                src="./img/200px-NAP-01_Back.png"></a></td>
+                    <td id="15" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="16" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="17" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="18" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
+                    <td id="19" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
+                                src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
             </tbody>
             <tfoot>
@@ -83,7 +83,7 @@
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
