--- a/p05/index.html
+++ b/p05/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title id="title"></title>
-    <link rel="shortcut icon" type="image/x-icon" href="./img/picture_compress.ico" />
+    <title id="title">Golden Stars Memorama</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/logo.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet" type="text/css" />
@@ -22,59 +22,37 @@
             </thead>
             <tbody>
                 <tr>
-                    <td id="0" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="1" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="2" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="3" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="4" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="0" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="1" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="2" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="3" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="4" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
                 <tr>
-                    <td id="5" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="6" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="7" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="8" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="9" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="5" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="6" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="7" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="8" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="9" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
                 <tr>
-                    <td id="10" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="11" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="12" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="13" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="14" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="10" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="11" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="12" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="13" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="14" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
                 <tr>
-                    <td id="15" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="16" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="17" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="18" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
-                    <td id="19" onClick="carta(this.id)"><img class="img-thumbnail img-fluid"
-                            src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="15" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="16" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="17" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="18" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
+                    <td><img id="19" onClick="carta(this.id)" class="img-thumbnail img-fluid" src="./img/200px-NAP-01_Back.png"></td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
-                    <th class="text-center tfoot-font-border" colspan="2">Intentos 0</th>
-                    <th class="text-center tfoot-font-border" colspan="2">Aciertos 0</th>
-                    <th class="text-center tfoot-font-border" colspan="1">%0</th>
+                    <!-- <th class="text-center tfoot-font-border" colspan="1"></th> -->
                 </tr>
             </tfoot>
         </table>
